BCTW2020 url added

--- a/BCTW2020/index.html
+++ b/BCTW2020/index.html
@@ -55,7 +55,7 @@
 						<!-- <div><img src="img/VJTI_logo.png" alt=""></div> -->
 						<div class="logo_content">
 							<div class="logo_text logo_text_not_ie">Welcome to BCTW 2020 (17th February 2020)</div>
-							<div class="logo_sub">Faculty Development Program / Govt. Officials Training on Blockchain Technology</div>
+							<div class="logo_sub"> Inter</div>
 						</div>
 					</div>
 				</a>
@@ -95,8 +95,8 @@
 											<div class="logo_container d-flex flex-row align-items-start justify-content-start">
 												<div class="logo_image"><div><img src="../img/blockchain.png" alt=""></div></div>
 												<div class="logo_content">
-													<div id="logo_text" class="logo_text logo_text_not_ie">Welcome to FT-BCT 2019												</div>
-													<div class="logo_sub"><b>Faculty Development Program / Govt. Officials Training on Blockchain Technology</b> </div>
+													<div id="logo_text" class="logo_text logo_text_not_ie">Welcome to BCTW - 2020												</div>
+													<div class="logo_sub"><b>Finishing School / Workshop on Blockchain Technology</b> </div>
 												</div>
 											</div>
 										</a>
@@ -144,7 +144,7 @@
 				<!-- <div class="row"> -->
 					<!-- <div class="col"> -->
 						<div class="home_content">
-							<div class="home_date"><h3>FDP Dates: 30 Sept to 4 Oct 2019<br>Venue: VJTI, Mumbai<br></h3>
+							<div class="home_date"><h3>Date: 17 February 2020<br>Venue: VJTI, Mumbai<br></h3>
 												<h3>Program Coordinator: Prof Dhiren Patel, VJTI Mumbai<br>
 													Program Co-coordinator: Prof Sunil Bhirud, VJTI Mumbai<br> 
 												</h3>
@@ -157,7 +157,7 @@
 <br><br>By maintaining an immutable, distributed ledger in a distributed network, Blockchain and Distributed Ledger Technology (DLT) systems has the potential to reduce the friction in business networks and thus the operating cost for business transactions…
 <br><br>Blockchain being a disruptive technology provides immense opportunities to the government, industry, and academia to design and implement transparent solutions for many real-life problems. The technology is available beyond crypto-currencies for a broader variety of applications for a variety of sectors.
 <br><br>
-This FDP/Training program is designed for technology understanding – both at foundational and advanced level for the capacity building in Blockchain. Five days deliberations encompass technical talks, case studies, hands on, technology showcase demos and interactive discussions with eminent speakers and brilliant Blockchain programmers - presenting technology advancements, readiness and promising use cases.  
+This Finishing School / Workshop is designed for technology awareness and upgradation – both at foundational and advanced level for the capacity building in Blockchain. It encompasses technical talks, case studies, hands on, technology showcase demos and interactive discussions with eminent speakers and brilliant Blockchain programmers - presenting technology advancements, readiness and promising use cases.  
 <br><br>This program is supported by VJTI Mumbai, MeitY, TEQIP III – and open for the country wide capacity building in Blockchain and DLT.
 
                           
@@ -204,13 +204,14 @@ This FDP/Training program is designed for technology understanding – both at f
                             <div class="intro_subtitle">
                                 Dr Dhiren Patel, VJTI Mumbai, India<br>
                                 Dr Yann Busnel, IMT Atlantique, France<br>
-								Dr Sandeep Shukla, IIT Kanpur<br>    
-								Dr K. Srinathathan, IIIT Hyderabad<br>
+								<!-- Dr Sandeep Shukla, IIT Kanpur<br>     -->
+								<!-- Dr K. Srinathathan, IIIT Hyderabad<br> -->
                                 Mr Jay Bothra, HSBC<br>
-                                Mr Sanket Shanbag, SAP<br>
-                                Dr. Chirag Modi, NIT Goa<br>
-                                Dr. Deven Shah, TCET Mumbai<br>
-                                (more to be added after receiving confirmation)<br>
+								Mr Sanket Shanbag, SAP<br>
+								Mr Aman Framewala and Mr Jainam Shah, VJTI<br>
+                                <!-- Dr. Chirag Modi, NIT Goa<br> -->
+                                <!-- Dr. Deven Shah, TCET Mumbai<br> -->
+                                <!-- (more to be added after receiving confirmation)<br> -->
                             </div>
                         </div>
                     </div>
@@ -227,9 +228,9 @@ This FDP/Training program is designed for technology understanding – both at f
 		<div class="container">
 			<div class="row">
 				<div class="col text-center">
-					<div class="pricing_section_title">Registration Request and Fees</div>
+					<div class="pricing_section_title">Registration Request</div>
 				</div>
-			<div class="row pricing_row">
+			<!-- <div class="row pricing_row">
 				<div class="col text-center" >
 					<ul class="pricing_section_title"> 
 						
@@ -248,7 +249,7 @@ This FDP/Training program is designed for technology understanding – both at f
 				    <p class="w-75 d-block mx-auto text-white text-light text-center">Participants will be given FDP stationary kit, lunch and refreshments</p>
 				    <p class="w-75 d-block mx-auto text-white text-light text-center">Outstation participants can apply well in advance for accommodation in/near VJTI campus (charges extra on concessional sharing or single accommodation basis)</p>
 
-				</div>
+				</div> -->
 				<!-- <div class="col-lg-4 pricing_col"> -->
 					<!-- <div class="pricing_section_title" > LIMITED SEATS AVAILABLE</div> -->
 					<!-- <div class="pricing_item pricing_item_mid">
