Sanket Designation Changed

--- a/BCTW2020/index.html
+++ b/BCTW2020/index.html
@@ -207,7 +207,7 @@ This Finishing School / Workshop is designed for technology awareness and upgrad
 								<!-- Dr Sandeep Shukla, IIT Kanpur<br>     -->
 								<!-- Dr K. Srinathathan, IIIT Hyderabad<br> -->
                                 Mr Jay Bothra, HSBC<br>
-								Mr Sanket Shanbag, SAP<br>
+								Mr Sanket Shanbag, Blockchain and AI Lab, VJTI<br>
 								Mr Aman Framewala and Mr Jainam Shah, VJTI<br>
                                 <!-- Dr. Chirag Modi, NIT Goa<br> -->
                                 <!-- Dr. Deven Shah, TCET Mumbai<br> -->
