--- a/BCTW2020/index.html
+++ b/BCTW2020/index.html
@@ -368,7 +368,7 @@
 									</tr>
 									<tr>
 									<td>1440 hrs</td>
-									<td>Dr Yann Busnel, IMT Atlantique, France</td>
+									<td>Sampling in the Blockchain, Dr Yann Busnel, IMT Atlantique, France</td>
 									</tr>
 									<tr>
 									<td>1520 hrs</td>
